# translate-shell

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yml  CHANGELOG.md  CITATION.cff  CITATION.cff.in  Dockerfile  Makefile  Makefile.am  README.md  action.yml  addon-info.json  autogen.sh  configure.ac  default.nix  flake.nix  package.json  pyproject.toml  pyproject.toml.in  requirements.txt  setup.py
.github/workflows/: main.yml
assets/desktop/: translate-shell.desktop
assets/json/: google.json
assets/txt/: help.txt  usage.txt
autoload/: translate_shell.vim
autoload/translate_shell/: utils.vim
doc/: translate-shell.txt
docs/: .gitignore  conf.py  index.md  requirements.txt
docs/api/: external.md  external.md.in  tools.md  translate_shell.md  translate_shell.md.in  translators.md  translators.md.in  ui.md  ui.md.in  utils.md  utils.md.in
docs/locale/zh_CN/LC_MESSAGES/: index.po
docs/locale/zh_CN/LC_MESSAGES/api/: external.po  translate_shell.po  translators.po  ui.po  utils.po
docs/locale/zh_CN/LC_MESSAGES/misc/: acknowledgements.po  changelog.po  todo.po
docs/locale/zh_CN/LC_MESSAGES/resources/: config.po  gui.po  install.po  man.po  readline.po  requirements.po  translator.po  vim.po
docs/misc/: acknowledgements.md  acknowledgements.md.in  todo.md  todo.md.in
docs/resources/: config.md  config.md.in  configure.md  development.md  gui.md  install.md  install.md.in  make.md  man.md  man.md.in  readline.md  requirements.md  requirements.md.in  tools.md  translator.md  translator.md.in  vim.md  vim.md.in
examples/: config.py  test.txt
plugin/: translate_shell.vim
requirements/: color.txt  completion.txt  dev.txt  keyring.txt  langdetect.txt  llama.txt  lsp.txt  notification.txt  openai.txt  po.txt  repl.txt  rich.txt  stardict.txt  wakatime.txt  yaml.txt
scripts/: entrypoint.py  eval-sh.pl  generate-CITATION.cff.pl  generate-CITATION.cff.py  generate-__init__.py.pl  generate-__init__.py.py  generate-acknowledgements.md.pl  generate-acknowledgements.md.sh  generate-addon-info.json.pl  generate-addon-info.json.py  generate-api.md.pl  generate-api.md.sh  generate-description.txt.py  generate-epilog.txt.py  generate-man.md.sh  generate-pyproject.toml.pl  generate-pyproject.toml.py  generate-repl-screenshot.py  generate-requirements.md.pl  generate-requirements.md.sh  generate-todo.md.pl  generate-todo.md.sh  generate-translator.md.py  generate-version.txt.py  generate-vim.md.pl  generate-vim.md.sh  print-version.sh  test-bench.py  trans
src/translate_shell/: __init__.py  __main__.py  config.py  translate.py
src/translate_shell/assets/bash/: preamble.sh
src/translate_shell/assets/jinja2/: system.j2
src/translate_shell/assets/json/: lang.json  langs.json  number.json  youdaozhiyun-error.json
src/translate_shell/assets/txt/: description.txt  epilog.txt  version.txt
src/translate_shell/assets/zsh/: preamble.zsh
src/translate_shell/tools/generate_prompt/: __main__.py
src/translate_shell/tools/po/: __main__.py  main.py
src/translate_shell/tools/repl/: __main__.py  main.py  ps1.py
src/translate_shell/translators/: __init__.py  speaker.py
src/translate_shell/translators/llm/: __init__.py  _llama_cpp.py  _openai.py
src/translate_shell/translators/online/: __init__.py  bing.py  google.py  haici.py  yandex.py  youdao.py  youdaozhiyun.py
src/translate_shell/translators/stardict/: __init__.py  jmdict_en_ja.py  jmdict_ja_en.py  langdao_ce_gb.py  langdao_ec_gb.py  stardict_ecdict.py
src/translate_shell/ui/: __init__.py  cli.py  gui.py  repl.py  server.py
src/translate_shell/utils/: __init__.py  clippers.py  complete.py  input.py  misc.py  notify.py  output.py  prompt.py  ps1.py  section.py  setting.py  speakers.py  youdaozhiyun.py
templates/: __init__.py  class.txt  def.txt  epilog.txt  metainfo.py  metainfo.py.j2  noarg.txt  pyproject.toml  version.txt
test/: .themisrc  syntax.vimspec
tests/: __init__.py  cmd_test.py  translate_test.py  utils_output_test.py
tests/json/: google.json
tests/txt/: options.txt  usage.txt
tests/utils/: __init__.py  output_test.py
